--- a/index.html
+++ b/index.html
@@ -1159,10 +1159,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Template licensing information removed for Skill Sprout Solutions -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a
-          href=“https://themewagon.com>ThemeWagon -->
+        <!-- Template references removed for Skill Sprout Solutions -->
       </div>
     </div>
 
